fix how to play on mobile

--- a/hgapp/info/static/info/quickstart.css
+++ b/hgapp/info/static/info/quickstart.css
@@ -102,7 +102,10 @@ h4 {
 
 @media (max-width: 768px) {
     .css-affix-spacer {
-        height: 30vh;
+        height: 90vh;
+    }
+    .css-affix-spacer-sm {
+        height: 65vh;
     }
     .css-post-affix-spacer {
         height: 250px;
